--- a/index.html
+++ b/index.html
@@ -9,21 +9,18 @@
 </head>
 
 <body>
-    <div class="container">
+    <!-- <div class="container">
         <div class="box box-1">
             <p>Box 1</p>
-            <p>Flex Item</p>
         </div>
         <div class="box box-2">
             <p>Box 2</p>
-            <p>Flex Item</p>
         </div>
         <div class="box box-3">
             <p>Box 3</p>
-            <p>Flex Item</p>
         </div>
-    </div>
-        <!-- <h1>
+    </div> -->
+        <h1>
         HIHI
     </h1>
     <p>
@@ -81,7 +78,7 @@
     </b>
     <i>sadjisajd</i>
     <u>dbsajdsa</u>
-    <a href="https://cs.fyi/guide/git-cheatsheet">Click vào đây</a> -->
+    <a href="https://cs.fyi/guide/git-cheatsheet">Click vào đây</a>
 
 
 </body>
